--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "version": "0.1.0",
   "engines": {
-    "node": "v18.17.1"
+    "node": "18.17.1",
+    "npm": "10.2.1"
   },
   "devDependencies": {
     "webpack-dev-server": "^5.0.4"
