--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "version": "0.1.0",
   "engines": {
     "node": "18.17.1",
+    "npm": "10.2.1",
     "yarn": "1.22.19"
   },
   "devDependencies": {
