--- a/test/fixtures/microposts.yml
+++ b/test/fixtures/microposts.yml
@@ -1,9 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  content: MyText
+  id: 1
+  content: MyText2
   user_id: 1
 
 two:
-  content: MyText
-  user_id: 1
+  id: 2
+  content: MyText2
+  user_id: 2
