--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,9 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  email: MyString
+  id: 1
+  name: MyString1
+  email: MyString1
 
 two:
-  name: MyString
-  email: MyString
+  id: 2
+  name: MyString2
+  email: MyString2
